setup debug and added squares component. should be all routes

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -81,6 +81,7 @@
 /* ---> Do not delete this comment (Directives) <--- */
 
 // Components
+@import "../common/squares/squares";
 /* ---> Do not delete this comment (Components) <--- */
 
 // Modules
