--- a/app/modules/_application/_application.scss
+++ b/app/modules/_application/_application.scss
@@ -5,12 +5,15 @@
 	height: $header-height;
 	background-color: #2b81af;
 	display: flex;
-	justify-content: flex-start;
+	justify-content: space-between;
 	align-items: center;
 	padding: 0 10px;
 	a {
 		color: #ffffff;
 		text-decoration: underline;
+	}
+	button {
+		margin: 0;
 	}
 }
 .content {
@@ -18,4 +21,19 @@
 	padding: $content-padding;
 	background-color: #f2f2f2;
 	height: 100vh;
+}
+
+.debugger {
+	background-color: #2b81af;
+	position: fixed;
+	top: 150px;
+	right: 50px;
+	padding: 20px;
+	width: 350px;
+	display: flex;
+	justify-content: space-between;
+	align-content: center;
+	button {
+		margin: 0;
+	}
 }
