--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -4,3 +4,12 @@ $secondary-color: #ff5bd4 !default;
 $header-height: 75px;
 
 $content-padding: 50px;
+
+$baseFontSize: 16;
+
+$green: #009688;
+$blue: #5677fc;
+$blueDark: #3b50ce;
+
+$slideDistance: 100;
+$slideDuration: .4s;
