more firebase and routing

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -1,5 +1,5 @@
-$primary-color: tomato !default;
-$secondary-color: #ff5bd4 !default;
+$primary-color: #2b81af;
+$secondary-color: #E6186D;
 
 $header-height: 75px;
 
@@ -10,6 +10,8 @@ $baseFontSize: 16;
 $green: #009688;
 $blue: #5677fc;
 $blueDark: #3b50ce;
+
+$hover-white: #e4e4e4;
 
 $slideDistance: 100;
 $slideDuration: .4s;
