--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -43,6 +43,9 @@
 // Variables
 @import "variables";
 
+// Layout
+@import "layout";
+
 /*
  	External Resources
 */
@@ -68,6 +71,8 @@
 @import "elements/loading-bar";
 @import "elements/square-containter";
 @import "elements/checkbox";
+@import "elements/buttons";
+@import "elements/forms";
 /* ---> Do not delete this comment (elements) <--- */
 
 // Components
@@ -89,4 +94,5 @@
 // Modules
 @import "../modules/_application/application";
 @import "../modules/index/index";
+@import "../modules/login/login";
 /* ---> Do not delete this comment (Modules) <--- */
