--- a/app/modules/_application/_application.scss
+++ b/app/modules/_application/_application.scss
@@ -3,17 +3,22 @@
 	top: 0;
 	width: 100vw;
 	height: $header-height;
-	background-color: #2b81af;
+	background-color: $primary-color;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	padding: 0 10px;
 	a {
-		color: #ffffff;
+		color: $white;
 		text-decoration: underline;
+		&:hover {
+			cursor: pointer;
+			color: $hover-white;
+		}
 	}
 	button {
 		margin: 0;
+		margin-right: 20px;
 	}
 }
 .content {
