--- a/app/styles/elements/_checkbox.scss
+++ b/app/styles/elements/_checkbox.scss
@@ -1,102 +1,30 @@
-
-@function rem($val) {
-	@return #{$val / $baseFontSize}rem;
+/*
+input[type=checkbox].css-checkbox {
+	position:absolute; z-index:-1000; left:-1000px; overflow: hidden; clip: rect(0 0 0 0); height:1px; width:1px; margin:-1px; padding:0; border:0;
 }
 
-.label--checkbox {
-	position: relative;
+input[type=checkbox].css-checkbox + label.css-label {
+	padding-left:27px;
+	height:22px;
+	display:inline-block;
+	line-height:22px;
+	background-repeat:no-repeat;
+	background-position: 0 0;
+	font-size:22px;
+	vertical-align:middle;
+	cursor:pointer;
 
-	margin: .5rem;
-
-	font-family: Arial, sans-serif;
-	line-height: 135%;
-
-	cursor: pointer;
 }
 
-.checkbox {
-	position: relative;
-	top: rem(-6);
-
-	margin: 0 1rem 0 0 ;
-
-	cursor: pointer;
-
-	&:before {
-		@include transition(all .3s ease-in-out);
-
-		content: "";
-
-		position: absolute;
-		left: 0;
-		z-index: 1;
-
-		width: 1rem;
-		height: 1rem;
-
-		border: 2px solid #f2f2f2;
-	}
-
-	&:checked {
-		&:before {
-			@include transform(rotate(-45deg));
-
-			height: .5rem;
-
-			border-color: $green;
-			border-top-style: none;
-			border-right-style: none;
-		}
-	}
-
-	&:after {
-		content: "";
-
-		position: absolute;
-		top: rem(-2);
-		left: 0;
-
-		width: 1.1rem;
-		height: 1.1rem;
-
-		background: #fff;
-
-		cursor: pointer;
-	}
+input[type=checkbox].css-checkbox:checked + label.css-label {
+	background-position: 0 -22px;
 }
-
-
-%slide-up {
-	-webkit-animation-duration: $slideDuration;
-	animation-duration: $slideDuration;
-	-webkit-animation-fill-mode: both;
-	animation-fill-mode: both;
-	-webkit-animation-name: slideUp;
-	animation-name: slideUp;
-	-webkit-animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-	animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-@-webkit-keyframes slideUp {
-	0% {
-		-webkit-transform: translateY(rem($slideDistance));
-		transform: translateY(rem($slideDistance));
-	}
-
-	100% {
-		-webkit-transform: translateY(0);
-		transform: translateY(0);
-	}
-}
-
-@keyframes slideUp {
-	0% {
-		-webkit-transform: translateY(rem($slideDistance));
-		transform: translateY(rem($slideDistance));
-	}
-
-	100% {
-		-webkit-transform: translateY(0);
-		transform: translateY(0);
-	}
-}
+label.css-label {
+	background-image:url(http://csscheckbox.com/checkboxes/u/csscheckbox_2983d659a567302637df5bbf66af6765.png);
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}*/
